# FasthapiX

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml  vs.code-workspace
src/: main.py
src/fasthapix/: main.py
src/fasthapix/statics/alpinejs/: activator.jquery.js  activator.js.map  codebase-l-d.css  codebase-l-d.css.map  codebase.css  codebase.css.map
src/fasthapix/statics/css/: fasthapix-min.css  fasthapix-opt.css  fasthapix.css
src/fasthapix/templates/: index.html
src/templates/: index.html
src/users/: data.py  main.py
tasks/: check.just  clean.just  css.just  doc.just
